# ParseLib

./: CMakeLists.txt  LICENSE  README.md  parselibConfig.cmake.in
include/parselib/JSON/: json.hpp
include/parselib/XML/: xml.hpp
include/parselib/core/: core.hpp
src/json/: json.cpp  main.cpp
src/xml/: main.cpp  xml.cpp
